@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: lreverse.n,v 1.2 2006/11/15 09:23:02 dkf Exp $
+'\" RCS: @(#) $Id: lreverse.n,v 1.2.4.1 2007/11/02 14:49:14 dgp Exp $
 '\" 
 .so man.macros
 .TH lreverse n 8.5 Tcl "Tcl Built-In Commands"
@@ -21,8 +21,10 @@ The \fBlreverse\fR command returns a list that has the same elements as its
 input list, \fIlist\fR, except with the elements in the reverse order.
 .SH EXAMPLES
 .CS
-\fBlreverse\fR {a a b c}        => c b a a
-\fBlreverse\fR {a b {c d} e f}  => f e {c d} b a
+\fBlreverse\fR {a a b c}
+      \fI\(-> c b a a\fR
+\fBlreverse\fR {a b {c d} e f}
+      \fI\(-> f e {c d} b a\fR
 .CE
 .SH "SEE ALSO"
 list(n), lsearch(n), lsort(n)
